apps/fast-sockets/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fast-sockets
spec:
  ports:
    - {name: http, port: 80, targetPort: http}
