apps/fast-sockets/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: fast-sockets
spec:
  hostnames: [fast-sockets.hellnet.com.br]
  parentRefs:
    - {name: hellnet, namespace: kube-system, sectionName: https}
  rules:
    - matches: [{path: {type: PathPrefix, value: /}}]
      backendRefs: [{name: fast-sockets, port: 80}]
